# search_engine_skillbox

./: .gitignore  CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  InvertedIndex.cpp  InvertedIndex.h  README.md  SearchServer.cpp  SearchServer.h  main.cpp
config/: config.json  requests.json
include/: ConverterJSON.h  SearchServer.h
nlohmann_json/: CMakeLists.txt  ChangeLog.md
resources/: file001.txt  file002.txt  file003.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  test_inverted_index.cpp  test_main.cpp  test_search_server.cpp
